src/test/ui/mut/mut-cant-alias.stderr
error[E0499]: cannot borrow `b` as mutable more than once at a time
  --> $DIR/mut-cant-alias.rs:19:20
   |
LL |     let b1 = &mut *b;
   |                    - first mutable borrow occurs here
LL |     let b2 = &mut *b; //~ ERROR cannot borrow
   |                    ^ second mutable borrow occurs here
LL | }
   | - first borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
